# bruno-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/bru-app/: Cargo.toml
crates/bru-app/sample/: New Request 2.bru  New Request.bru  Search Repos ไไไไ.bru
crates/bru-app/sample/Repository/: folder.bru
crates/bru-app/src/: actions.rs  chrome.rs  context_menu.rs  cookies.rs  edit.rs  editor.rs  editor_menu.rs  env_ui.rs  envfs.rs  format.rs  fsops.rs  fsutil.rs  git.rs  git_ui.rs  highlight.rs  icons.rs  import.rs  jsonpath.rs  main.rs  menus.rs  overlays.rs  prefs.rs  request_ops.rs  request_panes.rs  response.rs  runner.rs  settings.rs  statusbar.rs  tab.rs  tabs.rs  tests_helpers.rs  tests_update.rs  tests_view.rs  theme.rs  tree.rs  vars.rs  vault.rs  vault_ui.rs  widgets.rs
crates/bru-cli/: Cargo.toml
crates/bru-cli/src/: main.rs
crates/bru-cli/tests/: run.rs
crates/bru-core/: Cargo.toml
crates/bru-core/src/: assert.rs  collection.rs  interp.rs  lib.rs  model.rs  request.rs
crates/bru-core/tests/: coverage.rs  semantic.rs
crates/bru-engine/: Cargo.toml
crates/bru-engine/src/: context.rs  digest.rs  lib.rs  oauth.rs  sigv4.rs
crates/bru-engine/tests/: coverage.rs  engine.rs
crates/bru-gpui/: Cargo.toml
crates/bru-gpui/sample/: Search Repos.bru  collection.bru
crates/bru-gpui/sample/Repository/: Create Issue.bru
crates/bru-gpui/src/: edit.rs  editor.rs  highlight.rs  import.rs  main.rs  theme.rs
crates/bru-http/: Cargo.toml
crates/bru-http/src/: lib.rs
crates/bru-http/tests/: cap.rs  coverage.rs
crates/bru-import/: Cargo.toml
crates/bru-import/src/: lib.rs
crates/bru-lang/: Cargo.toml
crates/bru-lang/src/: env.rs  lib.rs  loader.rs  parse.rs  serialize.rs
crates/bru-lang/tests/: coverage.rs  loader.rs  round_trip.rs  units.rs
crates/bru-lang/tests/fixtures/: examples-multiline-contenttype.bru  examples-simple.bru
crates/bru-lang/tests/sample/: bruno.json  create-user.bru  get-users.bru
crates/bru-lang/tests/sample/Admin/: delete-user.bru  folder.bru
crates/bru-script/: Cargo.toml
crates/bru-script/src/: lib.rs  prelude.js  require.js
docs/: bruno-design-reference.md
