[workspace]
resolver = "2"
members = [
    "crates/bru-core",
    "crates/bru-lang",
    "crates/bru-http",
    "crates/bru-script",
    "crates/bru-engine",
    "crates/bru-cli",
    "crates/bru-app",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.95"
license = "MIT"
repository = "https://github.com/narawit/bruno-rs"

[workspace.dependencies]
# internal crates
bru-core = { path = "crates/bru-core" }
bru-lang = { path = "crates/bru-lang" }
bru-http = { path = "crates/bru-http" }
bru-script = { path = "crates/bru-script" }
bru-engine = { path = "crates/bru-engine" }

# shared external deps (single source of version truth)
serde_json = { version = "1", features = ["preserve_order"] }
csv = "1"
thiserror = "2"

[profile.release]
lto = "thin"
codegen-units = 1
