[package]
name = "bru-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "bruno-rs"
path = "src/main.rs"

[dependencies]
bru-core.workspace = true
bru-lang.workspace = true
bru-engine.workspace = true
bru-http.workspace = true
serde_json.workspace = true
iced = { version = "0.14", features = ["tokio", "highlighter"] }
rfd = "0.15"
# Secrets vault: AES-256-GCM at rest, key stretched from a master password.
aes-gcm = "0.10"
sha2 = "0.10"
getrandom = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
