[package]
name = "bru-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "bru"
path = "src/main.rs"

[dependencies]
bru-core.workspace = true
bru-lang.workspace = true
bru-engine.workspace = true
bru-http.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true
csv.workspace = true
