[package]
name = "bru-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bru-core.workspace = true
bru-http.workspace = true
bru-lang.workspace = true
bru-script.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
url = "2"
md-5 = "0.10"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
getrandom = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
