# Feasibility spike — NOT part of the main workspace (own [workspace] table) so
# it never affects bru-app or CI. Goal: prove gpui builds + runs on Windows
# before committing to any migration. Throwaway until proven.
[package]
name = "bru-gpui"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "bru-gpui"
path = "src/main.rs"

[dependencies]
# Reuse the framework-agnostic crates unchanged (cross-workspace path deps).
bru-core = { path = "../bru-core" }
bru-lang = { path = "../bru-lang" }
# gpui has no stable crates.io release; it's consumed from the Zed monorepo.
# Pinned to a known-good commit (proven to build on Windows) so `main` drift
# can't break us mid-migration.
gpui = { git = "https://github.com/zed-industries/zed", package = "gpui", rev = "69b602c7" }
# The platform entry point (`application()`) lives in its own crate at this rev.
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", rev = "69b602c7" }
# Tree-sitter syntax highlighting — the actual reason for the gpui move.
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-json = "0.24"

[workspace]
