[package]
name = "bru-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bru-core.workspace = true
serde_json.workspace = true
serde_urlencoded = "0.7"
thiserror.workspace = true
tokio = { version = "1", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "http2",
    "gzip",
    "brotli",
    "deflate",
    "charset",
    "multipart",
    "cookies",
] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "io-util", "time"] }
