[package]
name = "bru-script"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
bru-core.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# QuickJS (bundled C source, pre-generated bindings — no libclang on Windows).
rquickjs = "0.12"
